tests/baselines/reference/indexIntoArraySubclass(strict=true).errors.txt
indexIntoArraySubclass.ts(3,9): error TS2454: Variable 'x2' is used before being assigned.
indexIntoArraySubclass.ts(4,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== indexIntoArraySubclass.ts (2 errors) ====
    interface Foo2<T> extends Array<T> { }
    var x2: Foo2<string>;
    var r = x2[0]; // string
            ~~
!!! error TS2454: Variable 'x2' is used before being assigned.
    r = 0; //error
    ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.